--- a/index.html
+++ b/index.html
@@ -10,9 +10,73 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <button class="menu-open-btn">
+                <span>Menu</span>
+                <ion-icon name="menu-outline"></ion-icon>
+            </button>
+
+            <nav class="nav active">
+                <button class="menu-close-btn">
+                    <ion-icon name="close-outline"></ion-icon>
+                </button>
+
+                <h4 class="nav-heading">Menu</h4>
+                <ul>
+                    <li class="nav-item">
+                        <a href="#home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#profile" class="nav-link">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#education" class="nav-link">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#customer" class="nav-link">Customers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="nav-footer">
+                    <ul class="social-link">
+                        <li>
+                            <a href="">
+                                <ion-icon name="logo-facebook"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <ion-icon name="logo-instagram"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <ion-icon name="logo-linkedin"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <ion-icon name="logo-github"></ion-icon>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <p>Developed by <a href="" class="link-profile">Giang Duong</a></p>
+                </div>
+            </nav>
+        </header>
+    </div>
 
 
     <script src="./assets/js/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
