add intro section

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
 
-            <nav class="nav active">
+            <nav class="nav">
                 <button class="menu-close-btn">
                     <ion-icon name="close-outline"></ion-icon>
                 </button>
 
-                <h4 class="nav-heading">Menu</h4>
+                <h4 class="nav-heading ">Menu</h4>
                 <ul>
                     <li class="nav-item">
                         <a href="#home" class="nav-link">Home</a>
@@ -71,6 +71,28 @@
                     <p>Developed by <a href="" class="link-profile">Giang Duong</a></p>
                 </div>
             </nav>
+
+            <section class="intro section-padding">
+                <div class="intro-profile">
+                    <div class="intro-boder one"></div>
+                    <div class="intro-boder two"></div>
+                    <div class="img-box">
+                        <img src="./assets/img/avatar.jpg" alt="" class="intro-img" width="100%">
+                    </div>
+                    <p>Hi there! I am</p>
+                    <div class="profile-name">
+                        <span>[</span>
+                        <div>Giang Duong</div>
+                        <span>]</span>
+                    </div>
+                </div>
+
+                <a href="#contact" class="link-profile">
+                    <span class="circle"></span>
+                    <span class="link-profile">I'm a FrontEnd Developer</span>
+                </a>
+            </section>
+
         </header>
     </div>
 
