add content home section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="intro-boder one"></div>
                     <div class="intro-boder two"></div>
                     <div class="img-box">
-                        <img src="./assets/img/avatar.jpg" alt="" class="intro-img" width="100%">
+                        <img src="./assets/img/img_1.jpg" alt="" class="intro-img" width="100%">
                     </div>
                     <p>Hi there! I am</p>
                     <div class="profile-name">
@@ -94,6 +94,15 @@
             </section>
 
         </header>
+
+        <main>
+            <section class="section-padding" id="home">
+                <h3 class="section-subtitle">Introduction</h3>
+                <h2 class="section-title">UI/UX Designer</h2>
+                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                
+            </section>
+        </main>
     </div>
 
 
