add content about me

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                 <a href="#contact" class="link-profile">
                     <span class="circle"></span>
-                    <span class="link-profile">I'm a FrontEnd Developer</span>
+                    <span class="link-underline">I'm a FrontEnd Developer</span>
                 </a>
             </section>
 
@@ -101,6 +101,42 @@
                 <h2 class="section-title">UI/UX Designer</h2>
                 <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
                 
+            </section>
+            <section class="section-padding" id="home">
+                <h3 class="section-subtitle">About Me</h3>
+                <h2 class="section-title">Biography</h2>
+                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                <table class="about-table">
+                    <tr>
+                        <th>Name</th>
+                        <td>Giang Duong</td>
+                    </tr>
+                    <tr>
+                        <th>Birthday</th>
+                        <td>12nd September 2000</td>
+                    </tr>
+                    <tr>
+                        <th>Age</th>
+                        <td>22 years</td>
+                    </tr>
+                    <tr>
+                        <th>Address</th>
+                        <td>Ho Chi Minh City</td>
+                    </tr>
+                    <tr>
+                        <th>Phone</th>
+                        <td><a href="tel:+0399559432" class="link-underline">0399 559 432</a></td>
+                    </tr>
+                    <tr>
+                        <th>Email</th>
+                        <td><a href="mailto:giangduong120900@gmail.com" class="link-underline">giangduong120900@gmail.com</a></td>
+                    </tr>
+                </table>
+
+                <button class="downloaded_cv">
+                    <ion-icon name="cloud-download-outline"></ion-icon>
+                    <span>Download cv</span>
+                </button>
             </section>
         </main>
     </div>
