add content about nav

--- a/index.html
+++ b/index.html
@@ -137,6 +137,46 @@
                     <ion-icon name="cloud-download-outline"></ion-icon>
                     <span>Download cv</span>
                 </button>
+
+                <div class="about-tab">
+                    <ul class="tab-nav">
+                        <li>
+                            <button class="one tab-button active">Experience</button>
+                        </li>
+                        <li>
+                            <button class="two tab-button">Education</button>
+                        </li>
+                        <li>
+                            <button class="three tab-button">Skills</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content-group">
+                        <div class="one tab-content">
+                            <div class="content-card">
+                                <div class="card-head">
+                                    <h4>Kyanon Digital</h4>
+                                    <p>2022 - Present</p>
+                                </div>
+                                <div class="card-body">
+                                    <h3>Jr. Front-end Developer</h3>
+                                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="two tab-content active">
+                            <div class="content-card">
+                                <div class="card-head">
+                                    <h4>Ton Duc Thang University</h4>
+                                    <p>2018 - 2022</p>
+                                </div>
+                                <div class="card-body">
+                                    <h3>Computer Science</h3>
+                                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
