mod content education nav

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                     <p>2018 - 2022</p>
                                 </div>
                                 <div class="card-body">
-                                    <h3>Computer Science</h3>
+                                    <h3>Engineer's Degree</h3>
                                     <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                                 </div>
                             </div>
