add content about skills

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#profile" class="nav-link">Profile</a>
+                        <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#education" class="nav-link">Education</a>
+                        <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
                         <a href="#customer" class="nav-link">Customers</a>
@@ -151,7 +151,17 @@
                         </li>
                     </ul>
                     <div class="tab-content-group">
-                        <div class="one tab-content">
+                        <div class="one tab-content ">
+                            <div class="content-card">
+                                <div class="card-head">
+                                    <h4>Kyanon Digital</h4>
+                                    <p>2022 - Present</p>
+                                </div>
+                                <div class="card-body">
+                                    <h3>Jr. Front-end Developer</h3>
+                                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                </div>
+                            </div>
                             <div class="content-card">
                                 <div class="card-head">
                                     <h4>Kyanon Digital</h4>
@@ -173,6 +183,69 @@
                                     <h3>Engineer's Degree</h3>
                                     <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                                 </div>
+                            </div>
+                            <div class="content-card">
+                                <div class="card-head">
+                                    <h4>Ton Duc Thang University</h4>
+                                    <p>2018 - 2022</p>
+                                </div>
+                                <div class="card-body">
+                                    <h3>Engineer's Degree</h3>
+                                    <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="three tab-content-skill ">
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/html-5.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">Html</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/css-3.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">css</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/js.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">javascript</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/python.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">python</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/angular.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">angular</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/github.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">Git</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
+                            </div>
+                            <div class="skill-box">
+                                <div class="skill-title">
+                                    <img src="./assets/img/nodejs.png" class="icon-skill"></img>
+                                    <a href="#" class="link-underline">nodejs</a>
+                                </div>
+                                <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                         </div>
                     </div>
