add content first for portfolio

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </li>
                     </ul>
                     <div class="tab-content-group">
-                        <div class="one tab-content ">
+                        <div class="one tab-content active">
                             <div class="content-card">
                                 <div class="card-head">
                                     <h4>Kyanon Digital</h4>
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="two tab-content active">
+                        <div class="two tab-content">
                             <div class="content-card">
                                 <div class="card-head">
                                     <h4>Ton Duc Thang University</h4>
@@ -196,7 +196,7 @@
                             </div>
                         </div>
 
-                        <div class="three tab-content-skill ">
+                        <div class="three tab-content-skill">
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/html-5.png" class="icon-skill"></img>
@@ -248,6 +248,25 @@
                                 <p>Front-end web development, also known as client-side development is the practice of producing HTML, CSS and JavaScript for a website or Web Application so that a user can see and interact with them directly. The challenge associated with front end development is that the tools and techniques used to create the front end of a website change constantly and so the developer needs to constantly be aware of how the field is developing.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-padding" id="portfolio">
+                <h3 class="section-subtitle">Portfolio</h3>
+                <div class="wrapper">
+                    <div class="section-title">Featured Projects</div>
+                    <div class="btn-group">
+                        <button id="portfolio-carousel-prev">
+                            <div class="arrow">
+                                <div class="arrow-head-left"></div>
+                            </div>
+                        </button>
+                        <button id="portfolio-carousel-next">
+                            <div class="arrow">
+                                <div class="arrow-head-right"></div>
+                            </div>
+                        </button>
                     </div>
                 </div>
             </section>
