--- a/index.html
+++ b/index.html
@@ -267,8 +267,74 @@
                                 <div class="arrow-head-right"></div>
                             </div>
                         </button>
+                    </div>   
+                </div>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-carousel-inner">
+                        <div class="portfolio-carousel-card">
+                            <div class="card-head">
+                                <img src="./assets/img/slider-1.jpg" alt="" class="slider-img" width="100%">
+                            </div>
+                            <div class="card-body">
+                                <p>design</p>
+                                <h4><a href="">Sweet Cherry</a></h4>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-carousel-inner">
+                        <div class="portfolio-carousel-card">
+                            <div class="card-head">
+                                <img src="./assets/img/slider-2.jpg" alt="" class="slider-img" width="100%">
+                            </div>
+                            <div class="card-body">
+                                <p>web, mobile</p>
+                                <h4><a href="">Sweet Cherry</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-carousel-inner">
+                        <div class="portfolio-carousel-card">
+                            <div class="card-head">
+                                <img src="./assets/img/slider-3.jpg" alt="" class="slider-img" width="100%">
+                            </div>
+                            <div class="card-body">
+                                <p>web, mobile</p>
+                                <h4><a href="">Blue lemon</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-carousel-inner">
+                        <div class="portfolio-carousel-card">
+                            <div class="card-head">
+                                <img src="./assets/img/slider-4.jpg" alt="" class="slider-img" width="100%">
+                            </div>
+                            <div class="card-body">
+                                <p>web, mobile</p>
+                                <h4><a href="">Sweet Cherry</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-carousel">
+                    <div class="portfolio-carousel-inner">
+                        <div class="portfolio-carousel-card">
+                            <div class="card-head">
+                                <img src="./assets/img/slider-5.jpg" alt="" class="slider-img" width="100%">
+                            </div>
+                            <div class="card-body">
+                                <p>web, mobile</p>
+                                <h4><a href="">Ice cream</a></h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
             </section>
         </main>
     </div>
