add content customer

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                 <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
                 
             </section>
-            <section class="section-padding" id="home">
+
+            <section class="section-padding" id="about">
                 <h3 class="section-subtitle">About Me</h3>
                 <h2 class="section-title">Biography</h2>
                 <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
@@ -303,7 +304,7 @@
                             </div>
                             <div class="card-body">
                                 <p>web, mobile</p>
-                                <h4><a href="">Blue lemon</a></h4>
+                                <h4><a href="">Blue Lemon</a></h4>
                             </div>
                         </div>
                     </div>
@@ -329,12 +330,99 @@
                             </div>
                             <div class="card-body">
                                 <p>web, mobile</p>
-                                <h4><a href="">Ice cream</a></h4>
+                                <h4><a href="">Ice Cream</a></h4>
                             </div>
                         </div>
                     </div>
                 </div>
                 
+            </section>
+
+            <section class="section-padding" id="services">
+                <h3 class="section-subtitle">Services</h3>
+                <h2 class="section-title">What I Do</h2>
+                <p class="section-desc">I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                <div class="service-cards-group">
+                    <div class="service-card">
+                        <div class="card-body">
+                            <h3>Global Marketing</h3>
+                            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                        </div>
+                        <div class="card-footer">
+                            <span>Start fron</span>
+                            <div>$599</div>
+                        </div>
+                    </div>
+                    <div class="service-card">
+                        <div class="card-body">
+                            <h3>Global Marketing</h3>
+                            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                        </div>
+                        <div class="card-footer">
+                            <span>Start fron</span>
+                            <div>$599</div>
+                        </div>
+                    </div>
+                    <div class="service-card">
+                        <div class="card-body">
+                            <h3>Global Marketing</h3>
+                            <p>I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores</p>
+                        </div>
+                        <div class="card-footer">
+                            <span>Start fron</span>
+                            <div>$599</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-padding" id="customers">
+                <h3 class="section-subtitle">Customers</h3>
+                <h2 class="section-title">Happy People</h2>
+                <div class="wrapper">
+                    <a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-1.png" alt="" width="160px">
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-2.png" alt="" width="160px">
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-3.png" alt="" width="160px">
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-4.png" alt="" width="160px">
+                        </div>
+                    </a><a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-5.png" alt="" width="160px">
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-6.png" alt="" width="160px">
+                        </div>
+                    </a><a href="">
+                        <div class="img-box">
+                            <img src="./assets/img/client-7.png" alt="" width="160px">
+                        </div>
+                    </a>
+                </div>
+                <div class="testimonials">
+                    <div class="testimonials-content">
+                        <p>
+                            I design and develop services for customers of all sizes, specializing in creating stylish, modern website, web services and online stores
+                        </p>
+                        <div class="title">Dana Aktins</div>
+                        <div class="subtitle">Customers</div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
