--- a/index.html
+++ b/index.html
@@ -424,6 +424,59 @@
                     </div>
                 </div>
             </section>
+
+            <section class="section-padding" id="contacts">
+                <h3 class="section-subtitle">Contact</h3>
+                <h2 class="section-title">Get In Touch</h2>
+                <p class="section-desc">If you have any suggestion, project or even you want to say "Hello" , please fill out the form below and I will reply you shortly.</p>
+                <form action="#" class="contact-form">
+                    <div class="wrapper">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" name="name" id="name" required>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="text" name="email" id="email" required>
+                        </div>
+                    </div>
+                    <div>
+                        <label for="phone">Phone</label>
+                        <input type="tel" name="phone" id="phone">
+                    </div>
+                    <div>
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message"></textarea>>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </form>
+                <div class="address">
+                    <h4>Address</h4>
+                    <address>19, Nguyen Huu Tho St, Tan Hung, District 7, Ho Chi Minh City</address>
+                </div>
+                <div class="phone">
+                    <h4>Phone</h4>
+                    <a href="tel:0399559432">0399 559 432</a>
+                </div>
+                <div class="email">
+                    <h4>Email</h4>
+                    <a href="mailto:giangduong120900@gmail.com" class="link-underline">giangduong120900@gmail.com</a>
+                </div>
+            </section>
+
+            <div class="footer">
+                <a href="#home" class="go-top">
+                    <div class="arrow">
+                        <div class="arrow-head"></div>
+                    </div>
+                </a>
+                <p class="copyright">
+                    Copyright © 2022. All rights reserved. <br>
+                    Developed by <a href="#" class="link-underline">
+                        Giang Duong
+                    </a>
+                </p>
+            </div>
         </main>
     </div>
 
