--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
 
-            <nav class="nav">
+            <nav class="nav active">
                 <button class="menu-close-btn">
                     <ion-icon name="close-outline"></ion-icon>
                 </button>
@@ -37,10 +37,10 @@
                         <a href="#services" class="nav-link">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#customer" class="nav-link">Customers</a>
+                        <a href="#customers" class="nav-link">Customers</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contact</a>
+                        <a href="#contacts" class="nav-link">Contact</a>
                     </li>
                 </ul>
 
@@ -68,7 +68,7 @@
                         </li>
                     </ul>
 
-                    <p>Developed by <a href="" class="link-profile">Giang Duong</a></p>
+                    <p>Developed by <a href="" class="link-underline">Giang Duong</a></p>
                 </div>
             </nav>
 
@@ -142,13 +142,13 @@
                 <div class="about-tab">
                     <ul class="tab-nav">
                         <li>
-                            <button class="one tab-button active">Experience</button>
+                            <button class="one tab-button ">Experience</button>
                         </li>
                         <li>
-                            <button class="two tab-button">Education</button>
+                            <button class="two tab-button ">Education</button>
                         </li>
                         <li>
-                            <button class="three tab-button">Skills</button>
+                            <button class="three tab-button active">Skills</button>
                         </li>
                     </ul>
                     <div class="tab-content-group">
@@ -197,7 +197,7 @@
                             </div>
                         </div>
 
-                        <div class="three tab-content-skill">
+                        <div class="three tab-content tab-content-skill">
                             <div class="skill-box">
                                 <div class="skill-title">
                                     <img src="./assets/img/html-5.png" class="icon-skill"></img>
